testsuite/tests/partial-sigs/should_fail/T11976.stderr

T11976.hs:7:20: error:
    • Expecting one fewer arguments to ‘Lens t0 t1’
      Expected kind ‘k0 -> *’, but ‘Lens t0 t1’ has kind ‘*’
    • In the type ‘Lens _ _ _’
      In the expression: undefined :: Lens _ _ _
      In an equation for ‘foo’: foo = undefined :: Lens _ _ _
